src/main/java/com/example/citron/web/errors/field/TotalFieldAreaExceedsFarmAreaException.java
package com.example.citron.web.errors.field;

public class TotalFieldAreaExceedsFarmAreaException extends RuntimeException{

    public TotalFieldAreaExceedsFarmAreaException(String message){
        super(message);
    }
}
